# TeamForge

./: .gitignore  CLAUDE.md  Configuration.md  DESIGN_SYSTEM.md  GOAL.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.claude/agents/: 04-quality-security-architect-reviewer.md  code-reviewer.md  fullstack-developer.md  react-specialist.md  rust-specialist.md  tech-writer.md
.teamforge/: settings.json
agents_template/: README.md  code-reviewer.md  debugger.md  frontend-specialist.md  security-auditor.md
agents_template/architecture/: domain-driven-design-expert.md
agents_template/backend/: laravel-expert.md  nodejs-express-expert.md
agents_template/cloud/: aws-expert.md
agents_template/code-quality/: static-analysis-expert.md
agents_template/database/: postgresql-expert.md
agents_template/devops/: kubernetes-expert.md
agents_template/documentation/: technical-writer.md
agents_template/frontend/: vue-expert.md
electron/: main.js  preload.js
skills_dev/ddf/: SKILL.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent_commands.rs  config_commands.rs  git_commands.rs  mod.rs  project_commands.rs
src-tauri/src/embedded/: mod.rs
src-tauri/src/embedded/agents/: library.json
src-tauri/src/models/: mod.rs
src-tauri/src/services/: agent_service.rs  analyzer_service.rs  config_service.rs  git_service.rs  mod.rs  parser_service.rs
src-tauri/src/utils/: mod.rs
(+228 files in other folders)
